--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -99,7 +99,7 @@
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <img src="../Images/Principal.jpg" alt="" style="width: 100%; object-fit: cover;">
+      <img src="../Images/Portrait_placeholder.png" alt="" style="width: 100%; object-fit: cover;">
     </div>
   </div>
 </div>
@@ -107,8 +107,8 @@
 <!--maybe a card carousel with staff, highlight on grid?-->
 
 
-<div class="parallaxSection" style='background-image: url("../Images/Rise_Poster-Respect.jpg"); height: 100vh;'>
-  <div class="parallaxInner"></div>
+<div class="parallaxSection" style='background-image: url("../Images/Rise_Poster-Respect.jpg"); height: 50vh;'>
+  <div class="parallaxInner"></div> 
 </div>
 
 <div class="container-fluid mt-3">
