--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -41,8 +41,10 @@
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch">
             <li><a class="dropdown-item" href="#">Staff</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="#">Our School</a></li>
+            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+              CONTACT US
+            </button></li>
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
@@ -105,10 +107,41 @@
 </div>
 
 <!--maybe a card carousel with staff, highlight on grid?-->
+<h1>Our R.I.S.E values</h1>
 
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-<div class="parallaxSection" style='background-image: url("../Images/Rise_Poster-Respect.jpg"); height: 50vh;'>
-  <div class="parallaxInner"></div> 
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: cover;filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(300deg);">
+      <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
+    </div>
+    <div class="carousel-item">
+      <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: cover;">
+      <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
+    </div>
+    <div class="carousel-item">
+      <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: cover;">
+      <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
+    </div>
+  </div>
+  
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
 </div>
 
 <div class="container-fluid mt-3">
