--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  
 </head>
 <body>
 
@@ -93,10 +93,11 @@
   </div>
   </div>
 
+<!--principal's message-->
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-8">
-      <h3>Column 1</h3>
+      <h3>Message from the principal</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
@@ -107,7 +108,8 @@
 </div>
 
 <!--maybe a card carousel with staff, highlight on grid?-->
-<h1>Our R.I.S.E values</h1>
+<div class="container mt-5"><h1>Our R.I.S.E values</h1></div>
+
 
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -117,21 +119,26 @@
     <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
   </div>
   
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: cover;filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(300deg);">
+      <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
       <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
     </div>
     <div class="carousel-item">
-      <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: cover;">
+      <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
       <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
     </div>
     <div class="carousel-item">
-      <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: cover;">
+      <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
       <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
+    </div>
+    <div class="carousel-item">
+      <img src="../Images/Rise_Poster-Endurance.png" alt="Rise_Poster-Endurance" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
+      <img src="../Images/Rise_Poster-Endurance.png" alt="Rise_Poster-Endurance" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
     </div>
   </div>
   
@@ -143,6 +150,8 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
+
+
 
 <div class="container-fluid mt-3">
   <h3>Offcanvas Sidebar</h3>
@@ -181,7 +190,7 @@
   </button>
   
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../Js/Script.js" ></script>
 <link href="../CSS/Style.css" rel="stylesheet">
 </body>
