i added super cool map

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -9,13 +9,22 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+ 
 
 <div class="offcanvas offcanvas-bottom" id="demo">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Heading</h1>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
   </div>
-  
+</div>
+
+<div class="topnav">
+<a class= "active" href="AboutUs.html" >AboutUs</a>
+<a href="Enrolment.html"> Enrolment</a>
+
+
+</div>
+
   <div class="offcanvas-body">
     <p>Some text lorem ipsum.</p>
     <p>Some text lorem ipsum.</p>
