--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -4,7 +4,7 @@
   <title>Site</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   
   
 </head>
@@ -27,7 +27,7 @@
 
   
 
-
+<!--navbar-->
 <nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-light navbar-light sticky-top">
   <a class="navbar-brand d-lg-none" href="#"><img src="../Images/Text-Logo.png" id="logo"></img></a>
 
@@ -41,7 +41,7 @@
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch">
             <li><a class="dropdown-item" href="#">Staff</a></li>
-            <li><a class="dropdown-item" href="#">Our School</a></li>
+            <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
               CONTACT US
             </button></li>
@@ -98,8 +98,9 @@
   <div class="row">
     <div class="col-sm-8">
       <h3>Message from the principal</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
+
+        Aliquam malesuada finibus egestas. Praesent velit eros, eleifend et imperdiet eu, convallis non velit. Donec malesuada, ligula eget eleifend faucibus, arcu tellus sodales nulla, ut ultrices augue arcu a velit. Sed quis lorem vel lectus laoreet lobortis placerat et nisl. Integer pretium risus nec erat mollis vestibulum. Etiam molestie libero vitae dui rutrum ornare. Curabitur vulputate, elit eget mattis pulvinar, risus enim auctor augue, id lobortis lectus purus sed elit. Vivamus pretium arcu quis diam porttitor lobortis. Mauris et venenatis tellus. Nam sodales, massa id feugiat posuere, dui tortor dictum lorem, et pellentesque nisi dolor ac metus. Duis venenatis ipsum ac aliquam dictum. Ut felis quam, efficitur id ultricies sit amet, vestibulum et nibh. Nullam euismod ac dolor sit amet fringilla.</p>
     </div>
     <div class="col-sm-4">
       <img src="../Images/Portrait_placeholder.png" alt="" style="width: 100%; object-fit: cover;">
@@ -114,13 +115,13 @@
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-  <!-- Indicators/dots -->
+  <!-- Indicators/dots 
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-  </div>
+  </div>-->
   
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
@@ -182,7 +183,6 @@
   <br>
   <br>
   <br>
-
   
 
   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
@@ -190,9 +190,9 @@
   </button>
   
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../Js/Script.js" ></script>
 <link href="../CSS/Style.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
