carousel works i am a FOOL

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="offcanvas offcanvas-bottom" id="demo">
+<div class="offcanvas offcanvas-bottom" id="contactUs">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Heading</h1>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
@@ -42,7 +42,7 @@
           <ul class="dropdown-menu justify-items-stretch">
             <li><a class="dropdown-item" href="#">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
-            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
               CONTACT US
             </button></li>
           </ul>
@@ -113,14 +113,14 @@
 
 
 <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+<div id="riseValueCarousel" class="carousel slide" data-bs-ride="carousel">
 
   <!-- Indicators/dots 
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="2"></button>
+    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="3"></button>
   </div>-->
   
   <!-- The slideshow/carousel -->
@@ -144,10 +144,10 @@
   </div>
   
   <!-- Left and right controls/icons -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#riseValueCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#riseValueCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
@@ -185,7 +185,7 @@
   <br>
   
 
-  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
     CONTACT US
   </button>
   
