--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -18,12 +18,58 @@
   </div>
 </div>
 
-<div class="topnav">
-<a class= "active" href="AboutUs.html" >AboutUs</a>
-<a href="Enrolment.html"> Enrolment</a>
+<!--navbar-->
+<nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-light navbar-light sticky-top">
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
 
 
-</div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+      <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <ul class="dropdown-menu justify-items-stretch">
+            <li><a class="dropdown-item" href="#">Staff</a></li>
+            <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
+            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+              CONTACT US
+            </button></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">A third link</a></li>
+          </ul>
+        </li>
+
+
+        <a class="d-none d-lg-block" href="#"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">A third link</a></li>
+          </ul>
+        </li>  
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">A third link</a></li>
+          </ul>
+        </li>   
+      </ul>
+    </div>
+  
+</nav>
 
   <div class="offcanvas-body">
     <p>Some text lorem ipsum.</p>
