logo not huge no more

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -108,6 +108,8 @@
   </div>
 </div>
 
+<hr>
+
 <!--maybe a card carousel with staff, highlight on grid?-->
 <div class="container mt-5"><h1>Our R.I.S.E values</h1></div>
 
@@ -115,13 +117,13 @@
 <!-- Carousel -->
 <div id="riseValueCarousel" class="carousel slide" data-bs-ride="carousel">
 
-  <!-- Indicators/dots 
+<!--Indicators/dots--> 
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="0" class="active"></button>
     <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="2"></button>
     <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="3"></button>
-  </div>-->
+  </div>
   
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
