--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="../CSS/Style.css" rel="stylesheet">
+
 </head>
 <body>
  
@@ -20,7 +20,7 @@
 
 <!--navbar-->
 <nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-light navbar-light sticky-top">
-  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+  <a class="navbar-brand d-lg-none" href="#"><img src="../Images/Text-Logo.png" id="logo"></img></a>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -33,7 +33,7 @@
           <ul class="dropdown-menu justify-items-stretch">
             <li><a class="dropdown-item" href="#">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
-            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
               CONTACT US
             </button></li>
           </ul>
@@ -71,6 +71,8 @@
   
 </nav>
 
+
+
   <div class="offcanvas-body">
     <p>Some text lorem ipsum.</p>
     <p>Some text lorem ipsum.</p>
@@ -78,5 +80,7 @@
     <button class="btn btn-secondary" type="button">Button</button>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
