added an inspiring video to the incredible website

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -48,7 +48,8 @@
         </li>
 
 
-        <a class="d-none d-lg-block" href="#"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+        <a class="d-none d-lg-block" href="#"><img src="../Images/Text-Logo.png" id="logo"></img> 
+        </a>
 
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
@@ -78,5 +79,9 @@
     <button class="btn btn-secondary" type="button">Button</button>
   </div>
 </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eUAd5f936Yg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+  
+</iframe>
+
 </body>
 </html>
