changing the colours

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -17,7 +17,7 @@
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
   </div>
 
-<div class="offcanvas-body">
+  <div class="offcanvas-body">
     <p>Some text lorem ipsum.</p>
     <p>Some text lorem ipsum.</p>
     <p>Some text lorem ipsum.</p>
@@ -25,9 +25,8 @@
   </div>
 </div>
 <!--navbar-->
-<nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-light navbar-light sticky-top">
-  <a class="navbar-brand d-lg-none" href="#"><img src="../Images/Text-Logo.png" id="logo"></img></a>
-
+<nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -54,7 +53,7 @@
         </li>
 
 
-        <a class="d-none d-lg-block" href="#"><img src="../Images/Text-Logo.png" id="logo"></img> 
+        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img> 
         </a>
 
         <li class="nav-item dropdown m-3 h2">
@@ -92,13 +91,5 @@
   </div>
 </div>
 
-
-  <div class="offcanvas-body">
-    <p>Some text lorem ipsum.</p>
-    <p>Some text lorem ipsum.</p>
-    <p>Some text lorem ipsum.</p>
-    <button class="btn btn-secondary" type="button">Button</button>
-  </div>
-</div>
 </body>
 </html>
