--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -1,16 +1,103 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+    <html lang="en">
+<head>
+  <title>Site</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../CSS/Style.css" rel="stylesheet">
+
+</head>
+<body>
+ 
+
+<div class="offcanvas offcanvas-bottom" id="demo">
+  <div class="offcanvas-header">
+    <h1 class="offcanvas-title">Heading</h1>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+  </div>
+
+  <div class="offcanvas-body">
+    <p>Some text lorem ipsum.</p>
+    <p>Some text lorem ipsum.</p>
+    <p>Some text lorem ipsum.</p>
+    <button class="btn btn-secondary" type="button">Button</button>
+  </div>
+</div>
+<!--navbar-->
+<nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+      <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <ul class="dropdown-menu justify-items-stretch">
+            <li><a class="dropdown-item" href="#">Staff</a></li>
+            <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
+            <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
+              CONTACT US
+            </button></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">A third link</a></li>
+          </ul>
+        </li>
+
+
+        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img> 
+        </a>
+
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">A third link</a></li>
+          </ul>
+        </li>  
+        <li class="nav-item dropdown m-3 h2">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">A third link</a></li>
+          </ul>
+        </li>   
+      </ul>
+    </div>
+  
+</nav>
 
 
 
 
 <html> 
+
+<style> </style>
 <head>
-<title> RangeView Intermediate Enrolment </title>
 </head> 
 <body>
-    #sujal chand
+
 </body> 
+<div class="container mt-5 " style="padding-top: 10vh;">
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.9180610007097!2d174.64263751529182!3d-36.86838007993459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4056fbd24007%3A0x8f7b917267c2b1ce!2sRangeview%20Intermediate%20School!5e0!3m2!1sen!2snz!4v1678396105535!5m2!1sen!2snz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="col-sm-6">
+        <h3>Our School Zone</h3>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="740" height="540">
+</iframe>
+<h4> Our Bus route </h4>
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
 
+</p>
+
+<p>will add a signup thing Later idfk i Need to do psych 😔</p>
 <html>
