--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -26,7 +26,7 @@
 </div>
 <!--navbar-->
 <nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
-  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
@@ -53,7 +53,7 @@
         </li>
 
 
-        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img> 
+        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img> 
         </a>
 
         <li class="nav-item dropdown m-3 h2">
