--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -26,7 +26,7 @@
 </div>
 <!--navbar-->
 <nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
-  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
@@ -53,7 +53,7 @@
         </li>
 
 
-        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img> 
+        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img> 
         </a>
 
         <li class="nav-item dropdown m-3 h2">
@@ -86,10 +86,8 @@
 <head>
 </head> 
 <body>
-
-</body> 
 <div class="container mt-5 " style="padding-top: 10vh;">
-
+  <div class="row">
       <div class="col-sm-6">
         <h3>Our School Zone</h3>
 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="740" height="540">
@@ -97,7 +95,8 @@
 <h4> Our Bus route </h4>
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
 
-</p>
-
+</p></div>
+</div>
 <p>will add a signup thing Later idfk i Need to do psych 😔</p>
 <html>
+</body> 
