Added the Staff Page

--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -77,42 +77,12 @@
   
 </nav>
 
+<!--Introduction of Teachers to students and parents-->
+<div style="padding-top: 20vh"> 
+    <h3>Message from the principal</h3>
 
+<img src="../Images/me ong.png" height="150" >  
 
+<img src="../Images/LIONEL RICHIE !!!.jfif">
 
-<html> 
-
-<style> </style>
-<head>
-</head> 
-<body>
-
-</body> 
-<div class="container mt-5 " style="padding-top: 10vh;">
-
-      <div class="col-sm-6">
-        <h3>Our School Zone</h3>
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="740" height="540">
-</iframe>
-<h4> Enrolment Info </h4>
-<p> Rangeview Intermediate School: Enrolments for 2023
-
- 
-
-  Our office is open on weekdays from 8:00am – 3:00pm for both In-zone and Out–of–zone enrolments for 2023.
-  
-  Drop in to , look around, collect a prospectus, and enrol for 2023. Please bring Birth Certificate or Passport, Immunisation record and if In zone a proof of address.
-  
-  Ngā mihi nui
-  
-  We look forward to meeting you.
-  
-   
-  
-  Our school mission statement is to provide a learning environment to help each child towards a fulfilling future in which skills for life are developed with WISDOM AND TRUTH.
-  
-  We welcome visits from parents of prospective students by appointment between 9:00am and 1:00pm daily. For answers to any questions you may have please call 838 9468 or email office@rangeview.school.nz). Enrolment applications for 2023 are accepted from 8:00am - 3:00pm daily.
-
-</p>
-
-<html>
+</div>
