--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -80,7 +80,7 @@
 
 
 
-<html> 
+
 
 <style> </style>
 <head>
@@ -98,5 +98,8 @@
 </p></div>
 </div>
 <p>will add a signup thing Later idfk i Need to do psych 😔</p>
-<html>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
 </body> 
+<html>
