--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -29,7 +29,7 @@
 
 <!--navbar-->
 <nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
-  <a class="navbar-brand d-lg-none" href="#"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
       <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch">
             <li><a class="dropdown-item" href="#">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
@@ -49,7 +49,7 @@
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="Enrolment.html">Location</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
@@ -72,7 +72,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
           </ul>
         </li>   
       </ul>
@@ -110,49 +110,51 @@
 
 <hr>
 
-<!--maybe a card carousel with staff, highlight on grid?-->
-<div class="container mt-5"><h1>Our R.I.S.E values</h1></div>
 
-
-<!-- Carousel -->
+<div class="container mt-5"><h1>Our R.I.S.E values</h1>
+  <!-- Carousel -->
 <div id="riseValueCarousel" class="carousel slide" data-bs-ride="carousel">
 
-<!--Indicators/dots--> 
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="2"></button>
-    <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="3"></button>
+  <!--Indicators/dots--> 
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="2"></button>
+      <button type="button" data-bs-target="#riseValueCarousel" data-bs-slide-to="3"></button>
+    </div>
+    
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-none d-sm-block" style="height: 50vh; width: 100%; object-fit: contain;">
+        <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-block d-sm-none" style="height: 20vh; width: 100%; object-fit: cover;">
+      </div>
+      <div class="carousel-item">
+        <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-none d-sm-block" style="height: 50vh; width: 100%; object-fit: contain;">
+        <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-block d-sm-none" style="height: 20vh; width: 100%; object-fit: cover;">
+      </div>
+      <div class="carousel-item">
+        <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-none d-sm-block" style="height: 50vh; width: 100%; object-fit: contain;">
+        <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-block d-sm-none" style="height: 20vh; width: 100%; object-fit: cover;">
+      </div>
+      <div class="carousel-item">
+        <img src="../Images/Rise_Poster-Endurance.png" alt="Rise_Poster-Endurance" class="d-none d-sm-block" style="height: 50vh; width: 100%; object-fit: contain;">
+        <img src="../Images/Rise_Poster-Endurance.png" alt="Rise_Poster-Endurance" class="d-block d-sm-none" style="height: 20vh; width: 100%; object-fit: cover;">
+      </div>
+    </div>
+    
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#riseValueCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#riseValueCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
   </div>
-  
-  <!-- The slideshow/carousel -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
-      <img src="../Images/Rise_Poster-Respect.jpg" alt="Rise_Poster-Respect" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
-    </div>
-    <div class="carousel-item">
-      <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
-      <img src="../Images/Rise_Poster-Integrity.jpg" alt="Rise_Poster-Integrity" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
-    </div>
-    <div class="carousel-item">
-      <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
-      <img src="../Images/Rise_Poster-Service.png" alt="Rise_Poster-Service" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
-    </div>
-    <div class="carousel-item">
-      <img src="../Images/Rise_Poster-Endurance.png" alt="Rise_Poster-Endurance" class="d-none d-sm-block" style="height: 50vh; width: 100vw; object-fit: contain;">
-      <img src="../Images/Rise_Poster-Endurance.png" alt="Rise_Poster-Endurance" class="d-block d-sm-none" style="height: 20vh; width: 100vw; object-fit: cover;">
-    </div>
-  </div>
-  
-  <!-- Left and right controls/icons -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#riseValueCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#riseValueCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
 </div>
+
+
+
 
 
 
@@ -194,7 +196,8 @@
 </div>
 <script src="../Js/Script.js" ></script>
 <link href="../CSS/Style.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 
 </html>
