Added the board of trustees page

--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -79,9 +79,17 @@
 
 <!--Introduction of Teachers to students and parents-->
 <div style="padding-top: 20vh"> 
+.image1
+{
+  <margin-top> 300px </margin-top>
+  margin-left: 200px 
+}
+
     <h3>Message from the principal</h3>
 
-<img src="../Images/me ong.png" height="150" >  
+<img src="../Images/me ong.png" class="image1" height="150">  
+
+
 
 <img src="../Images/LIONEL RICHIE !!!.jfif">
 
