slide effect on navbar removed top of map iframe changed colours sticky navbar is sticky now

--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 <!--navbar-->
-<nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
+<nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
   <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -34,8 +34,8 @@
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
       <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
-          <ul class="dropdown-menu justify-items-stretch">
+          <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <ul class="dropdown-menu justify-items-stretch animate slideIn">
             <li><a class="dropdown-item" href="#">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
@@ -45,20 +45,20 @@
         </li>
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
+          <ul class="dropdown-menu animate slideIn">
+            <li><a class="dropdown-item" href="Enrolment.html">Location</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
         </li>
 
-
+        <!--hidden on mobile-->
         <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img> 
         </a>
 
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
@@ -66,10 +66,10 @@
         </li>  
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
           </ul>
         </li>   
       </ul>
@@ -89,9 +89,10 @@
 <div class="container mt-5 " style="padding-top: 10vh;">
   <div class="row">
       <div class="col-sm-6">
-        <h3>Our School Zone</h3>
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="740" height="540">
-</iframe>
+        <h2>Our School Zone</h2>
+        <div class="removeTop">
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="100%" height="540" style=" margin-top:-75px; ">
+</iframe> </div>
 <h4> Our Bus route </h4>
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
 
