Staff page and h1 border

--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -25,8 +25,8 @@
   </div>
 </div>
 <!--navbar-->
-<nav class="navbar position-absolute w-100 fixed-top navbar-expand-sm bg-dark navbar-dark sticky-top">
-  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img></a>
+<nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
+  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,8 @@
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
       <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">About Us</a>
-          <ul class="dropdown-menu justify-items-stretch">
+          <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <ul class="dropdown-menu justify-items-stretch animate slideIn">
             <li><a class="dropdown-item" href="#">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
@@ -44,32 +44,32 @@
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
+          <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <ul class="dropdown-menu animate slideIn">
+            <li><a class="dropdown-item" href="Enrolment.html">Location</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
         </li>
 
-
-        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo.png" id="logo"></img> 
+        <!--hidden on mobile-->
+        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img> 
         </a>
 
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
         </li>  
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
-          <ul class="dropdown-menu">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">News Letter</a>
+          <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
           </ul>
         </li>   
       </ul>
@@ -78,19 +78,174 @@
 </nav>
 
 <!--Introduction of Teachers to students and parents-->
-<div style="padding-top: 20vh"> 
-.image1
-{
-  <margin-top> 300px </margin-top>
-  margin-left: 200px 
-}
-
-    <h3>Message from the principal</h3>
-
-<img src="../Images/me ong.png" class="image1" height="150">  
-
-
-
-<img src="../Images/LIONEL RICHIE !!!.jfif">
-
+<div class="container mt-5" style="padding-top: 10vh"> 
+  <div class="row">
+    <h1>Rangeview Staff</h1>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row" >
+    <div class="col-sm-1">
+      <!--initiates stagger-->
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row" >
+    <div class="col-sm-1">
+      <!--initiates stagger-->
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Staff member information.</p>
+      </div>
+    </div>
+  </div>
 </div>
