--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -77,27 +77,25 @@
   
 </nav>
 
-
-
-
-
-
-<style> </style>
 <head>
 </head> 
 <body>
 <div class="container mt-5 " style="padding-top: 10vh;">
   <div class="row">
       <div class="col-sm-6">
-        <h2>Our School Zone</h2>
+        <h1>Our School Zone</h1>
         <div class="removeTop">
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="100%" height="540" style=" margin-top:-75px; ">
-</iframe> </div>
-<h4> Our Bus route </h4>
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
+          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="100%" height="540" style=" margin-top:-75px; padding-bottom: -75px;">
+          </iframe> 
+        </div>
+      </div>
+      <div class="col-sm-6" style="padding-top: 10vh;">
+        <h2> Our Bus route </h2>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
+        </p>
+      </div>
+  </div>
+</div>
 
-</p>
-
-<p>will add a signup thing Later idfk i Need to do psych 😔</p>
 <html>
 </body> 
