fixed the image problem on the uniform page

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -39,8 +39,9 @@
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch animate slideIn">
-            <li><a class="dropdown-item" href="#">Staff</a></li>
+            <li><a class="dropdown-item" href="Staff.html">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
+            <li><a class="dropdown-item" href="BoardOfTrustees.html">BoardOfTrustees</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
               CONTACT US
             </button></li>
@@ -62,13 +63,13 @@
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
           <ul class="dropdown-menu animate slideIn">
-            <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
+            <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
         </li>  
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">News Letter</a>
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Link</a>
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
