--- a/Pages/Uniform.html
+++ b/Pages/Uniform.html
@@ -81,6 +81,6 @@
 
 <h1> Uniform Gang Gang </h1>
 
-<img src="../Rangeview uniform.jpg">
+<img src="../Images/Rangeview uniform.jpg"  width="25%">  
 
 </div>
