Added uniform images to the uniform page,

--- a/Pages/Uniform.html
+++ b/Pages/Uniform.html
@@ -77,10 +77,22 @@
   
 </nav>
 
-<div style="padding-top: 20vh"> 
 
-<h1> Uniform Gang Gang </h1>
 
-<img src="../Images/Rangeview uniform.jpg"  width="25%">  
+  <div class="container mt-5" style="padding-top: 10vh"> 
+    <div class="row">
+      <h1>Our Uniform</h1>
+      <div class="col-sm-2">
+        <div class="card">
+        </div>
 
+
+        <div class="col-sm-2">
+          <div class="row">
+            <div class="column">
+            <img src="../Images/Rangeview Uniform 1 .png" height="500"  width="400">
+            </div>
+            <img src="../Images/Rangeview Uniform words.png" height="500" width="400"> 
+           </div>
+        </div>
 </div>
