--- a/Pages/BoardOfTrustees.html
+++ b/Pages/BoardOfTrustees.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-<div class="offcanvas offcanvas-bottom" id="contactUs">
+<!--Contact us offcanvas-->
+<div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Heading</h1>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
@@ -23,9 +24,6 @@
     <button class="btn btn-secondary" type="button">Button</button>
   </div>
 </div>
-
-
-  
 
 <!--navbar-->
 <nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
