--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -4,13 +4,15 @@
   <title>Site</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
   
   
 </head>
 <body>
 
-<div class="offcanvas offcanvas-bottom" id="contactUs">
+
+<!--Contact us offcanvas-->
+<div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Heading</h1>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
@@ -23,9 +25,6 @@
     <button class="btn btn-secondary" type="button">Button</button>
   </div>
 </div>
-
-
-  
 
 <!--navbar-->
 <nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
@@ -160,7 +159,9 @@
 
 
 
-<div class="container-fluid mt-3">
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-sm-8">
   <h3>Offcanvas Sidebar</h3>
   <p>Offcanvas is similar to modals, except that it is often used as a sidebar.</p>
   <br>
@@ -194,7 +195,8 @@
   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
     CONTACT US
   </button>
-  
+    </div>
+  </div>
 </div>
 <script src="../Js/Script.js" ></script>
 <link href="../CSS/Style.css" rel="stylesheet">
