--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -10,13 +10,13 @@
 </head>
 <body>
  
-
-<div class="offcanvas offcanvas-bottom" id="demo">
+<!--Contact us offcanvas-->
+<div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Heading</h1>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
   </div>
-
+  
   <div class="offcanvas-body">
     <p>Some text lorem ipsum.</p>
     <p>Some text lorem ipsum.</p>
@@ -24,6 +24,7 @@
     <button class="btn btn-secondary" type="button">Button</button>
   </div>
 </div>
+
 <!--navbar-->
 <nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
   <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
@@ -36,8 +37,9 @@
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch animate slideIn">
-            <li><a class="dropdown-item" href="#">Staff</a></li>
+            <li><a class="dropdown-item" href="Staff.html">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
+            <li><a class="dropdown-item" href="BoardOfTrustees.html">BoardOfTrustees</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
               CONTACT US
             </button></li>
@@ -59,13 +61,13 @@
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
           <ul class="dropdown-menu animate slideIn">
-            <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
+            <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
         </li>  
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">News Letter</a>
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Link</a>
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
